@@ -18,7 +18,7 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
-MOUNTER_VERSION=v2
+MOUNTER_VERSION=v3
 MOUNTER_USER=root
 ROOT_DIR=/home/kubernetes/bin
 RKT_BINARY=${ROOT_DIR}/rkt
@@ -31,9 +31,9 @@ function gc {
     # Rkt pods end up creating new copies of mounts on the host. Hence it is ideal to clean them up right away.
     attempt=0
     until [ $attempt -ge 5 ]; do
-	${RKT_BINARY} gc --grace-period=0s &> /dev/null && break
-	attempt=$[$attempt+1]
-	sleep 1
+      ${RKT_BINARY} gc --grace-period=0s &> /dev/null && break
+      attempt=$[$attempt+1]
+      sleep 1
     done
 }
 
@@ -45,11 +45,17 @@ if [[ ! $(${RKT_BINARY} image list | grep ${MOUNTER_IMAGE}) ]]; then
 fi
 
 echo "Running mount using a rkt fly container"
-
-${RKT_BINARY} run --stage1-path=${STAGE1_ACI} \
-	--insecure-options=image \
-	--volume=kubelet,kind=host,source=/var/lib/kubelet,readOnly=false,recursive=true \
-	--mount volume=kubelet,target=/var/lib/kubelet \
-	${MOUNTER_IMAGE} --user=${MOUNTER_USER} --exec /bin/mount -- "$@"
-
+if [ "$#" -eq 0 ]; then
+  ${RKT_BINARY} run --stage1-path=${STAGE1_ACI} \
+    --insecure-options=image \
+    --volume=kubelet,kind=host,source=/var/lib/kubelet,readOnly=false,recursive=true \
+    --mount volume=kubelet,target=/var/lib/kubelet \
+    ${MOUNTER_IMAGE} --user=${MOUNTER_USER} --exec /bin/mount
+else
+  ${RKT_BINARY} run --stage1-path=${STAGE1_ACI} \
+    --insecure-options=image \
+    --volume=kubelet,kind=host,source=/var/lib/kubelet,readOnly=false,recursive=true \
+    --mount volume=kubelet,target=/var/lib/kubelet \
+    ${MOUNTER_IMAGE} --user=${MOUNTER_USER} --exec /startmounter.sh -- "$@"
+fi
 echo "Successfully ran mount using a rkt fly container"
